--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -64,6 +64,44 @@
 }
 
 
+
+
+.navbar-profile{
+    position: relative;
+}
+.nav-profile-dropdown{
+    position: absolute;
+    display: none;
+    right: 0;
+    z-index: 1;
+}
+.navbar-profile:hover .nav-profile-dropdown{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color:#fff4f2;
+    padding: 12px 25px;
+    border-radius: 4px;
+    border: 1px solid white;
+    outline: 2px solid tomato;
+    list-style: none;
+    cursor: pointer;
+}
+.nav-profile-dropdown li{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    margin-top: 5px;
+}
+.nav-profile-dropdown img{
+    width: 20px;
+    background-color: #fff4f2;
+}
+.nav-profile-dropdown li:hover{
+    color: tomato;
+}
+
 /* responsiveness */
 @media (max-width: 1050px){
     .navbar.logo{
